# tic-tac-toe

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  Makefile  README.md  button.c  main.c  player.c  player.h  table.c  table.h  turn.c  turn.h  utils.h
include/: button.h  table.h  utils.h
src/: CMakeLists.txt  main.c  table.c
